Fix: product slider title misaligned on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,8 +490,10 @@ header.sticky.visible {
 }
 
 .product-slider__title {
+  margin: auto;
   margin-bottom: 24px;
   text-align: center;
+  max-width: 70%;
 }
 
 .product-slider__highlight {
